@@ -1,4 +1,4 @@
-DIST h2o-gtk2-default-2.0.tar.gz 211621 RMD160 521c190707c46d96d99efc501de36211aa9cc1a3 SHA1 477435bc54e1abc0c9527b5289d5f94071f681f9 SHA256 d09e2563fb7d9b16061eba3507009cd545ebf1bdc4cf1c0e111ee91a07104b46
-EBUILD gtk-themes-h2o-gtk2-2.0.ebuild 590 RMD160 0ebf424f56b2596610c1329a86fa07c010799f07 SHA1 fceaeae85eb2a5ef0d9ed6d293b1e219484c1a84 SHA256 a2ea7409249e7994c3e3170617a42b8e85d0d08db60a02045bc0a3ef0aab8d37
-MISC ChangeLog 241 RMD160 122eb26d98264ced9a5295539fe128f24a81dea4 SHA1 82fd01cc10205f3a2d0a5baa100f42b5007ab3d5 SHA256 b4ac74992eeb7850a980cafe082b722b7178e9924f7191e7f635bfbdd7028dc7
+DIST GTK2-H2O-default-2.0.tar.gz 211621 RMD160 521c190707c46d96d99efc501de36211aa9cc1a3 SHA1 477435bc54e1abc0c9527b5289d5f94071f681f9 SHA256 d09e2563fb7d9b16061eba3507009cd545ebf1bdc4cf1c0e111ee91a07104b46
+EBUILD gtk-themes-h2o-gtk2-2.0.ebuild 598 RMD160 b7484e10be3be938948650b55c576e90b7bc83d7 SHA1 6ba500caf15d2bec1fc3278ca637a1f123bb67d1 SHA256 06349374ef3d700718506bef967340169beb5727cda436bcbf5f7c27ef9f696b
+MISC ChangeLog 415 RMD160 4e302a3e98e37766c283d2d50959624598ab6505 SHA1 17a4d86964b591ad682113c7c42f85eb51da4999 SHA256 1bd3f9ac38d74dcb8158b4cd44c9653ef7d67486fb909fc6fe8f4703f8ee70f9
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
