@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-themes-h2o-gtk2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  05 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
+  gtk-themes-h2o-gtk2-2.0.ebuild:
+  Update HOMEPAGE and SRC_URI to point to GNOME Art archive. Cleanup.
 
   21 Jun 2006; Alexandru Toma (analoguedragon) <flash3001@yahoo.com>
   ChangeLog:
